--- a/src/components/Dropdown/Side_Navigation/styles.scss
+++ b/src/components/Dropdown/Side_Navigation/styles.scss
@@ -1,6 +1,6 @@
 @import 'assets/scss';
 
-.bottom-popup-container {
+.side-navigation-container {
   display: flex;
   position: absolute;
   width: 100vw;
@@ -9,7 +9,7 @@
   height: calc(100vh - 181px);
   max-height: calc(100vh - 181px);
   overflow-y: scroll;
-  z-index: -1;
+  z-index: 9;
 
   .content-container {
     width: 100%;
